--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.App{
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+  color: #212121;
+  font-family: "Open Sans", sans-serif;
+  display: grid;
+  place-items: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0%;
+  padding: 0%;
 }
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Join-chat {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.Join-chat h3{
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Join-chat input{
+  width: 210px;
+  height: 40px;
+  margin: 7px;
+  border: 2px solid #17ceeade;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+}
+.Join-chat button{
+  width: 225px;
+  height: 50px;
+  margin: 7px;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  background-color: rgba(254, 184, 43, 0.961);
+  color: #fff;
+  cursor: pointer;
+}
+.Join-chat button:hover{
+  background: #50ab5d;
+  color: black;
 }
